--- a/client/src/app/members/member-messages/member-messages.component.html
+++ b/client/src/app/members/member-messages/member-messages.component.html
@@ -56,7 +56,7 @@
         <div class="input-group-append">
           <button [disabled]="!messageForm.valid || loading"
             class="btn btn-outline-primary ml-1"
-            type="submit">Send <i *ngIf="loading" class="fa-regular fa-rotate fa-spin"></i></button>
+            type="submit">Send <i *ngIf="loading" class="fa fa-spinner fa-spin"></i></button>
         </div>
       </div>
     </form>
