--- a/client/src/app/app.component.html
+++ b/client/src/app/app.component.html
@@ -1,8 +1,9 @@
 <ngx-spinner>
   <h3>Loading...</h3>
 </ngx-spinner>
-<app-nav></app-nav>
-<div class="container" style="margin-top: 6.25rem;">
-    <router-outlet></router-outlet>
-</div>
 
+<app-nav></app-nav>
+
+<div class="container" style="margin-top: 100px">
+  <router-outlet></router-outlet>
+</div>
